[package]
name = "sedl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
glow = "0.13.1"
imgui = "0.11.0"
imgui-glow-renderer = "0.11.0"
imgui-sdl2-support = "0.11.0"
sdl2 = {version = "0.34.5", features = ["bundled", "static-link"]}
